# pdf_table_scraper

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.dev.txt  requirements.prod.txt
app/: limit_config.py  main.py  middleware.py
app/scraper/: routes.py  schemas.py  scrape_service.py
tests/: test_scraper.py
